k3s/cert-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
