k3s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: pigeongram
spec:
  selector:
    app: pigeongram
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pigeongram
  namespace: pigeongram
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pigeongram
  template:
    metadata:
      labels:
        app: pigeongram
    spec:
      containers:
        - name: app
          image: ghcr.io/pavlovvitaly/pigeongram:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
